fix for overflow bug on mobile

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -1,6 +1,7 @@
 @use './variables' as *;
 html { 
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; 
+    overflow-x: hidden;
 }
 
 body {  
