--- a/styles/styles.css
+++ b/styles/styles.css
@@ -443,6 +443,7 @@ footer li {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
